Integrate hint from Teo Sarca BUG ID 1617928 - Inefficient use of Boolean ctor for gen. model Pending generation of the whole model for next version